<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#A1FFDD00"
    tools:context=".MainActivity">
    <!--android:background="@drawable/langos"  this makes the background a langos-->


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="40dp"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/how_to_win"
            android:textSize="40dp" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/discription"
            android:textSize="15dp" />

        <ToggleButton
            android:id="@+id/btnToggle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textOff="@string/toggle_flag"
            android:textOn="@string/toggle_try"/>

        <com.ait.minesweeper.ui.MineSweeperView
            android:id="@+id/mineSweeperView"
            android:layout_width="300dp"
            android:layout_height="300dp" />

    </LinearLayout>


        <TextView
            android:id="@+id/tvMode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/the_current_mode_is_try"
            android:textSize="26sp" />

    <Button
        android:id="@+id/btnReset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Reset"/>




</LinearLayout>